Cherry-pick r266405. rdar://problem/68652679

Crashtracer in SubresourceLoader::didCancel.
    <rdar://problem/32831629> and https://bugs.webkit.org/show_bug.cgi?id=216020

    Reviewed by Alex Christensen.

    No new tests (Despite spotting theoretical ways this is possible, unable to construct a reproduction)

    It's possible for a newly created SubresourceLoader to be cancelled right after creation.
    In this case, m_resource will be null inside of SubresourceLoader::didCancel.

    Other parts of SubresourceLoader null check m_resource, so it's reasonable to state ::didCancel should as well.

    * loader/SubresourceLoader.cpp:
    (WebCore::SubresourceLoader::didCancel): Early return if reachedTerminalState(), and ASSERT(m_resource) after.

    Canonical link: https://commits.webkit.org/228836@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266405 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.52@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@266854 268f45cc-cd09-0410-ab3c-d52691b4dbfc